feat：添加客户联系回调配置/统一命名异步方法

--- a/WeComLoad/WeComLoad.csproj
+++ b/WeComLoad/WeComLoad.csproj
@@ -10,4 +10,17 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ConfigExtContactCallbackView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="ConfigExtContactCallbackView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
