feat：login and config

--- a/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
+++ b/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "WeComLoad.Open.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": "false",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
