--- a/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
+++ b/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "false",
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5000;http://0.0.0.0:5000;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
