refactor：open for wpf refactor

--- a/src/WeComLoad.Open/WeComLoad.Open.csproj
+++ b/src/WeComLoad.Open/WeComLoad.Open.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\appsettings.json">
+    <None Update="Resources\custapp.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
