--- a/src/WeComLoad.Open.Blazor/WeComLoad.Open.Blazor.csproj
+++ b/src/WeComLoad.Open.Blazor/WeComLoad.Open.Blazor.csproj
@@ -27,6 +27,12 @@
   <ItemGroup>
     <ProjectReference Include="..\WeComLoad.Shared\WeComLoad.Shared.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\js\wecom.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   
   <PropertyGroup Condition=" '$(SolutionDir)'==''">
     <SolutionDir>./</SolutionDir>
