--- a/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
+++ b/src/WeComLoad.Open.Blazor/Properties/launchSettings.json
@@ -2,12 +2,16 @@
   "profiles": {
     "WeComLoad.Open.Blazor": {
       "commandName": "Project",
-      "dotnetRunMessages": "false",
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5000;http://0.0.0.0:5000;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000;http://0.0.0.0:5000;",
+      "dotnetRunMessages": "false"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
