--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,10 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
-        
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '16.x'
+      displayName: 'Install Node.js'
     - task: Docker@2
       displayName: 'build docker image and push'
       inputs:
