--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,7 @@ stages:
 
     - task: SSH@0
       displayName: 'run wecom tool container'
+      condition: and(succeeded())
       inputs:
         sshEndpoint: 'HuaweiCloud'
         runOptions: 'inline'
