--- a/src/WeComLoad.Open.Blazor/Dockerfile
+++ b/src/WeComLoad.Open.Blazor/Dockerfile
@@ -4,6 +4,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 
+FROM node:16-alpine
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY . .
