--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ stages:
     - script: |
         echo ready to execute command
         sed '1,$d' $(custAppConfig)
+        sed '$a$(cust_app_config)' $(custAppConfig)
         echo "================= print file $(custAppConfig) start ===================="
         cat $(custAppConfig) | while read line; do echo $line ; done
         echo "================= print file $(custAppConfig) end ===================="
