--- a/src/WeComLoad.Shared/WeComLoad.Shared.csproj
+++ b/src/WeComLoad.Shared/WeComLoad.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
